// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageItem> renders a loading author 1`] = `
<div
  className="f1wcc981"
>
  <div
    className="f1yj56me"
  >
    <Shimmer
      height={32}
      radius="50%"
      width={32}
    />
  </div>
  <div
    className="flaut3y"
  >
    <Spacing
      bottom={0.5}
    >
      <Spacing
        inline={true}
        right={1}
      >
        <Shimmer
          height={14}
          width={175}
        />
      </Spacing>
      <Text
        inline={true}
        muted={true}
        small={true}
      >
        11:56 AM
      </Text>
    </Spacing>
    Hello world
  </div>
</div>
`;

exports[`<MessageItem> renders a message item 1`] = `
<div
  className="f1wcc981"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`horizontalSpacing\` 1`] = `
<div
  className="f1apvney"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`important\` 1`] = `
<div
  className="fh2nfmg"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`info\` stripe 1`] = `
<div
  className="fafxtu1"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`verticalSpacing\` 1`] = `
<div
  className="f1s90t6d"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a message item with \`warning\` stripe 1`] = `
<div
  className="f1gnhwd8"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a sending overlay when message is sending 1`] = `
<div
  className="f1wcc981"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
  <div
    className="f11obty3"
  />
</div>
`;

exports[`<MessageItem> renders a source when given 1`] = `
<div
  className="f1wcc981"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM via web
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders a title tag when given 1`] = `
<div
  className="f1wcc981"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <span
          className="f1akc1c8"
        >
          <Text
            inline={true}
            micro={true}
            muted={true}
          >
            CX
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageItem> renders an email when given 1`] = `
<div
  className="f1wcc981"
>
  <div
    className="f1tbchna"
  >
    <div
      className="f1yj56me"
    >
      <ProfilePhoto
        imageSrc="https://image.com"
        size={4}
        title="title"
      />
    </div>
    <div
      className="flaut3y"
    >
      <Spacing
        bottom={0.5}
      >
        <span
          className="fl825od"
        >
          <Text
            bold={true}
            inline={true}
          >
            title
          </Text>
        </span>
        <Text
          inline={true}
          muted={true}
          small={true}
        >
          11:56 AM
        </Text>
        <Text
          muted={true}
          small={true}
        >
          <Translate
            context="Who the message is from"
            email="foo@airbnb.com"
            html={true}
            phrase="From: %{email}"
          />
        </Text>
      </Spacing>
      <div
        className="f1jofppb"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;
